--- a/index.html
+++ b/index.html
@@ -175,8 +175,6 @@ span.amp {
 <img id="in-heaven" src="in-heaven.png" alt="In Heaven">
 <img id="on-earth" src="on-earth.png" alt="On Earth">
 -->
-<img id="i-alone" src="i-alone.png" alt="I alone">
-<img id="am-revered" src="am-revered.png" alt="am revered">
 
 <nav>
 <a href="mailto:g.sastry@gmail.com">g.sastry@gmail.com</a>
@@ -201,7 +199,7 @@ task assignment algorithm for Hadoop.
 <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</p>
 <p> I worked on Human-Robot Interaction -- in particular, investigating the
 effect of agency on cheat reporting (in other words, taking a page out of
-Asmiov: what standards of
+Asimov: what standards of
 social behaviour will we hold robots to when they [inevitably] coexist?
 (<a href="papers/robots.pdf">pdf</a>)</p>
 <p> I compared different classification methods for email spam.
@@ -229,7 +227,6 @@ social behaviour will we hold robots to when they [inevitably] coexist?
 <h1>Personal</h1>
 <ul>
     <li> You can also find me at: Facebook. Twitter. LinkedIn. Last.fm. </li>
-    <li> 
 </ul>
 </section>
 
