--- a/index.html
+++ b/index.html
@@ -220,13 +220,20 @@ social behaviour will we hold robots to when they [inevitably] coexist?
     (<a href="papers/nukes.pdf">pdf</a>)</li>
     <li> A long and rambling expos&eacute; on the failings of the modern GUI
     (<a href="papers/gui.pdf">pdf</a>)</li>
+    <li> You can see a lot of what I'm actively working on my 
+    <a href="http://www.github.com/gsastry">Github</a> account. </li>
 </ul>
 </section>
 
 <section id="personal">
 <h1>Personal</h1>
 <ul>
-    <li> You can also find me at: Facebook. Twitter. LinkedIn. Last.fm. </li>
+    <li> You can also find me at: 
+    <a href="http://www.facebook.com/gyratortron">Facebook.</a>
+    <a href="http://www.twitter.com/gsastry">Twitter.</a>
+    <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
+    <a href="http://www.last.fm/mashitaro">Last.fm.</a>
+    <a href="http://www.github.com/gsastry">Github.</a>
 </ul>
 </section>
 
