--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ social behaviour will we hold robots to when they [inevitably] coexist?
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
     <a href="http://www.last.fm/mashitaro">Last.fm.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
+    <a href="http://www.quora.com/girish-sastry">Quora.</a>
 </ul>
 </section>
 
