--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ social behaviour will we hold robots to when they [inevitably] coexist?
 </section>
 
 <footer id="date">Summer 2011. Design cannibalized from Shu-yu Guo.<footer>
+<script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
 </body>
 </html>
 
