--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ functional programming.</p>
 
 <section id="research">
 <h1>Research <span class="amp">&amp;</span> Selected Projects</h1>
-<p> For my undergraduate thesis work, I implemented and benchmarked a new
+<p> For my undergraduate thesis work, I optimized, implemented, and benchmarked
+FlowScheduler, a new
 task assignment algorithm for Hadoop.
 (<a href="papers/writeup.pdf">pdf</a> / 
 <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</p>
@@ -232,7 +233,7 @@ social behaviour will we hold robots to when they [inevitably] coexist?
     <a href="http://www.facebook.com/gyratortron">Facebook.</a>
     <a href="http://www.twitter.com/gsastry">Twitter.</a>
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-    <a href="http://www.last.fm/mashitaro">Last.fm.</a>
+    <a href="http://www.last.fm/users/mashitaro">Last.fm.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
 </ul>
