actually fixed last.fm link

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ social behaviour will we hold robots to when they [inevitably] coexist?
     <a href="http://www.facebook.com/gyratortron">Facebook.</a>
     <a href="http://www.twitter.com/gsastry">Twitter.</a>
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-    <a href="http://www.last.fm/users/mashitaro">Last.fm.</a>
+    <a href="http://www.last.fm/user/mashitaro">Last.fm.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
 </ul>
