Update job description

--- a/index.html
+++ b/index.html
@@ -182,13 +182,12 @@ span.amp {
 
 
 <section id="intro">
-<p> I am a software engineer at <a href="http://www.twitter.com">Twitter</a>.
-Previously, I studied Computer Science and other interesting things at 
-<a href="http://cs.yale.edu">Yale University</a>. I did my undergraduate
+<p> I am a software engineer at <a href="http://www.twitter.com">Twitter</a>, where
+I work on Revenue. Previously, I studied Computer Science and other interesting things 
+at <a href="http://cs.yale.edu">Yale University</a>. I did my undergraduate
 thesis work under <a href="http://cs-www.cs.yale.edu/homes/dna/">Dan Abadi</a>.
 
-<p>I am interested in big data (infrastructure and algorithms) and 
-functional programming.</p>
+<p>I am interested in data products and functional programming.</p>
 </section>
 
 <section id="research">
