Remove uncessary frunk

--- a/index.html
+++ b/index.html
@@ -182,46 +182,24 @@ span.amp {
 
 
 <section id="intro">
-<p> I am a software engineer at <a href="http://www.twitter.com">Twitter</a>, where
-I work on Revenue. Previously, I studied Computer Science and other interesting things 
-at <a href="http://cs.yale.edu">Yale University</a>. I did my undergraduate
-thesis work under <a href="http://cs-www.cs.yale.edu/homes/dna/">Dan Abadi</a>.
-
-<p>I am interested in data products and functional programming.</p>
-</section>
-
-<section id="research">
-<h1>Research <span class="amp">&amp;</span> Selected Projects</h1>
-<p> For my undergraduate thesis work, I optimized, implemented, and benchmarked
-FlowScheduler, a new
-task assignment algorithm for Hadoop.
-(<a href="papers/writeup.pdf">pdf</a> / 
-<a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</p>
-<p> I worked on Human-Robot Interaction -- in particular, investigating the
-effect of agency on cheat reporting (in other words, taking a page out of
-Asimov: what standards of
-social behaviour will we hold robots to when they [inevitably] coexist?
-(<a href="papers/robots.pdf">pdf</a>)</p>
-<p> I compared different classification methods for email spam.
-(<a href="papers/writeup-spam.pdf">pdf</a>)</p>
-
+<p> I work as a software engineer at <a href="http://www.twitter.com">Twitter</a>, where
+I've worked on Revenue and Growth. Previously, I studied Computer Science and other interesting things 
+at <a href="http://cs.yale.edu">Yale University</a>. 
 
 </section>
+
 <section id="projects">
-<h1>Other Projects</h1>
+<h1>Projects</h1>
 
 <ul>
+    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
+    task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
+    <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
     <li> A ruby implementation of <a href="http://pdos.csail.mit.edu/chord/">
 	Chord</a>, a distributed hash table.
     (<a href="http://www.github.com/gsastry/chord">code</a>)</li>
     <li> Bash like variable expansion in Python (aka: regexes)
     (<a href="http://www.github.com/gsastry/expand">code</a>)</li>
-    <li> A historical analysis of the Indian-Pakistani nuclear tension 
-    (<a href="papers/nukes.pdf">pdf</a>)</li>
-    <li> A long and rambling expos&eacute; on the failings of the modern GUI
-    (<a href="papers/gui.pdf">pdf</a>)</li>
-    <li> You can see a lot of what I'm actively working on my 
-    <a href="http://www.github.com/gsastry">Github</a> account. </li>
 </ul>
 </section>
 
