Testing some updates to description.

--- a/index.html
+++ b/index.html
@@ -182,8 +182,10 @@ span.amp {
 
 
 <section id="intro">
-<p> I work as a software engineer at <a href="http://www.twitter.com">Twitter</a>, where
-I've worked on Revenue and Growth. Previously, I studied Computer Science and other interesting things 
+<p> I'm currently traveling around the world and hacking on personal perojects 
+(broadly in the area of transmedia storytelling). I used to work as a software engineer at 
+<a href="http://www.twitter.com">Twitter</a>, where I've worked on Revenue and Growth. 
+Previously, I studied Computer Science and other interesting things 
 at <a href="http://cs.yale.edu">Yale University</a>. 
 
 </section>
