--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@ span.amp {
 
 
 <section id="intro">
-<p> I'm currently traveling around the world and hacking on personal perojects 
-(broadly in the area of transmedia storytelling). I used to work as a software engineer at 
-<a href="http://www.twitter.com">Twitter</a>, where I've worked on Revenue and Growth. 
+<p> I'm currently traveling around the world and hacking on personal projects 
+(broadly in the area of transmedia storytelling). I used to work as a Software Engineer at 
+<a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth. 
 Previously, I studied Computer Science and other interesting things 
-at <a href="http://cs.yale.edu">Yale University</a>. 
+at <a href="http://www.yale.edu">Yale University</a>. 
 
 </section>
 
@@ -197,11 +197,6 @@ at <a href="http://cs.yale.edu">Yale University</a>.
     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
     task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
-    <li> A ruby implementation of <a href="http://pdos.csail.mit.edu/chord/">
-	Chord</a>, a distributed hash table.
-    (<a href="http://www.github.com/gsastry/chord">code</a>)</li>
-    <li> Bash like variable expansion in Python (aka: regexes)
-    (<a href="http://www.github.com/gsastry/expand">code</a>)</li>
 </ul>
 </section>
 
@@ -215,6 +210,7 @@ at <a href="http://cs.yale.edu">Yale University</a>.
     <a href="http://www.last.fm/user/mashitaro">Last.fm.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
+    Get in touch directly at g dot sastry at gmail dot com.
 </ul>
 </section>
 
