--- a/index.html
+++ b/index.html
@@ -190,10 +190,12 @@ at <a href="http://www.yale.edu">Yale University</a>.
 
 </section>
 
-<section id="projects">
-<h1>Projects</h1>
+<section id="stuff">
+<h1>Stuff</h1>
 
 <ul>
+    <li>I'm broadly interested in issues of narrative, new aesthetics, strategic decision making,
+    and how we can apply technology to these areas to drive culture forward.</li>
     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
     task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
@@ -205,16 +207,16 @@ at <a href="http://www.yale.edu">Yale University</a>.
 <ul>
     <li> You can also find me at: 
     <a href="http://www.facebook.com/gyratortron">Facebook.</a>
-    <a href="http://www.twitter.com/gsastry">Twitter.</a>
+    <a href="http://www.twitter.com/gyratortron">Twitter.</a>
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-    <a href="http://www.last.fm/user/mashitaro">Last.fm.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
-    Get in touch directly at g dot sastry at gmail dot com.
+    <li>Feel free to get in touch directly at g dot sastry at gmail dot com if you want to talk</li>
 </ul>
+<ul>
 </section>
 
-<footer id="date">Summer 2011. Design cannibalized from Shu-yu Guo.<footer>
+<footer id="date">Last updated January 2013. Design cannibalized from Shu-yu Guo.<footer>
 <script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
 </body>
 </html>
