Adds nav links.

--- a/index.html
+++ b/index.html
@@ -178,12 +178,13 @@ span.amp {
 
 <nav>
 <a href="mailto:g.sastry@gmail.com">g.sastry@gmail.com</a>
+<a href="#">blog</a>
 </nav>
 
 
 <section id="intro">
-<p> I'm currently traveling around the world and hacking on personal projects 
-(broadly in the area of transmedia storytelling). I used to work as a Software Engineer at 
+<p> I'm currently traveling around the world and hacking on personal projects.
+I used to work as a Software Engineer at 
 <a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth. 
 Previously, I studied Computer Science and other interesting things 
 at <a href="http://www.yale.edu">Yale University</a>. 
@@ -199,6 +200,8 @@ at <a href="http://www.yale.edu">Yale University</a>.
     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
     task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
+    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
+    a product to visualize terms associated with events in realtime, and growth experiments.
 </ul>
 </section>
 
@@ -211,7 +214,7 @@ at <a href="http://www.yale.edu">Yale University</a>.
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
-    <li>Feel free to get in touch directly at g dot sastry at gmail dot com if you want to talk</li>
+    <li>Feel free to get in touch directly via email if you wanna talk.</li>
 </ul>
 <ul>
 </section>
