--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ span.amp {
 -->
 
 <nav>
-<a href="mailto:g.sastry@gmail.com">g.sastry@gmail.com</a>
-<a href="#">blog</a>
+<a href="mailto:g.sastry@gmail.com">email</a>
+<a href="#">weblog</a>
 </nav>
 
 
@@ -205,8 +205,8 @@ at <a href="http://www.yale.edu">Yale University</a>.
 </ul>
 </section>
 
-<section id="personal">
-<h1>Personal</h1>
+<section id="other">
+<h1>Other</h1>
 <ul>
     <li> You can also find me at: 
     <a href="http://www.facebook.com/gyratortron">Facebook.</a>
