--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ at <a href="http://www.yale.edu">Yale University</a>.
     task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
     <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
-    a product to visualize terms associated with events in realtime, and growth experiments.
+    a product to visualize terms associated with events in realtime, and user growth 
+    experiments.
 </ul>
 </section>
 
