Keep identity small.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ span.amp {
 
 <nav>
 <a href="mailto:g.sastry@gmail.com">email</a>
-<a href="#">weblog</a>
+<a href="#">travelog</a>
 </nav>
 
 
@@ -195,14 +195,13 @@ at <a href="http://www.yale.edu">Yale University</a>.
 <h1>Stuff</h1>
 
 <ul>
-    <li>I'm broadly interested in issues of narrative, new aesthetics, strategic decision making,
-    and how we can apply technology to these areas to drive culture forward.</li>
+	<li> disclaimer: I'm too lazy to update this site often </li>
+    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
+    a product to visualize terms associated with events in realtime, and user growth 
+    experiments.</li>
     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
     task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
-    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
-    a product to visualize terms associated with events in realtime, and user growth 
-    experiments.
 </ul>
 </section>
 
