--- a/index.html
+++ b/index.html
@@ -4,170 +4,7 @@
 <meta charset="utf-8">
 <link rel="icon" href="/favicon.ico">
 <title>girish sastry</title>
-<style type="text/css">
-@font-face {
-	font-family: 'GaramondSemibold';
-	src: url('garamond-med-webfont.eot');
-	src: local('☺'), url('garamond-med-webfont.woff') format('woff'), url('garamond-med-webfont.ttf') format('truetype'), url('garamond-med-webfont.svg#webfont8huxkvgh') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-body {
-	font: 1.2em/1.35 Baskerville, Georgia, "Times New Roman", Times, serif;
-	color: #444;
-	background-color: #ececec;
-}
-
-code {
-	font: 1em "Calibri", "Lucida Grande", sans-serif;
-}
-
-img {
-	border: none;
-}
-
-img#name {
-	display: block;
-	margin: 150px auto;
-	margin-bottom: 0;
-	padding: 10px 150px;
-	padding-bottom: 0px;
-	border-top: 2px solid #444;
-	border-bottom: 2px solid #444;
-}
-
-img#seal {
-	position: relative;
-	display: block;
-	margin: 0 auto;
-	top: -60px;
-	left: 200px;
-}
-
-img#in-heaven {
-	position: fixed;
-	top: 10px;
-	right: 10px;
-}
-
-img#on-earth {
-	position: fixed;
-	top: 10px;
-	left: 10px;
-}
-
-img#i-alone {
-	position: fixed;
-	bottom: 10px;
-	right: 10px;
-}
-
-img#am-revered {
-	position: fixed;
-	bottom: 10px;
-	left: 10px;
-}
-
-section > h1 {
-    color: #333;
-	font-family: "GaramondSemibold", Baskerville, Georgia, serif;
-	font-size: 1.6em;
-	padding-left: 1em;
-    text-shadow: 0 1px 0.5px white;
-	margin-top: 0.55em;
-	margin-bottom: 0;
-}
-
-section > h1:before {
-	padding-right: 1em;
-	content: '❧';
-}
-
-article > h1 {
-    color: black;
-	font-size: 1.15em;
-	font-style: italic;
-	font-weight: normal;
-	margin: 0;
-}
-
-article > h2 {
-	font-size: 1em;
-	font-weight: normal;
-	margin: 0;
-	padding-left: 1em;
-}
-
-ul {
-	list-style: square;
-	margin: 0;
-	padding-left: 1em;
-}
-
-p {
-	margin: 0;
-	text-align: justify;
-}
-
-p + p {
-	margin-top: 0.5em;
-}
-
-section {
-	display: block;
-	margin: 0 auto;
-	width: 640px;
-}
-
-nav {
-	display: block;
-	text-align: center;
-	margin-top: 0px;
-	margin-bottom: 20px;
-}
-
-nav > a + a {
-	margin-left: 8em;
-}
-
-a {
-    color: black;
-	outline: none;
-    font-style: italic;
-	text-decoration: none;
-}
-
-a:hover {
-    outline: none;
-    color: maroon;
-}
-
-a:active {
-	outline: none;
-    color: maroon;
-}
-
-#date {
-	display: block;
-	width: 640px;
-	margin: 0 auto;
-	text-align: center;
-	margin-top: 2em;
-	font-size: small;
-	color: #ccc;
-}
-
-span.amp {
-  font-family: Baskerville, Palatino, "Book Antiqua", serif;
-  font-size: 1.4em;
-  font-weight: normal;
-  font-style: italic;
-  position: relative;
-  top: 0.12em;
-}
-
-</style>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <img id="name" src="images/name.png" alt="Girish Sastry">
@@ -180,10 +17,10 @@ span.amp {
 
 <section id="intro">
 <p> I'm currently traveling around the world and hacking on personal projects.
-I used to work as a Software Engineer at 
-<a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth. 
-Previously, I studied Computer Science and other interesting things 
-at <a href="http://www.yale.edu">Yale University</a>. 
+I used to work as a Software Engineer at
+<a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
+Previously, I studied Computer Science and other interesting things
+at <a href="http://www.yale.edu">Yale University</a>.
 
 </section>
 
@@ -193,10 +30,10 @@ at <a href="http://www.yale.edu">Yale University</a>.
 <ul>
 	<li> disclaimer: I'm too lazy to update this site often </li>
     <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
-    a product to visualize terms associated with events in realtime, and user growth 
+    a product to visualize terms associated with events in realtime, and user growth
     experiments.</li>
-    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new 
-    task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a> 
+    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
+    task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a>
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
 </ul>
 </section>
@@ -204,7 +41,7 @@ at <a href="http://www.yale.edu">Yale University</a>.
 <section id="other">
 <h1>Other</h1>
 <ul>
-    <li> You can also find me at: 
+    <li> You can also find me at:
     <a href="http://www.facebook.com/gyratortron">Facebook.</a>
     <a href="http://www.twitter.com/gyratortron">Twitter.</a>
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
