Adds PGP public key information.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ at <a href="http://www.yale.edu">Yale University</a>.
     <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
     <a href="http://www.github.com/gsastry">Github.</a>
     <a href="http://www.quora.com/girish-sastry">Quora.</a>
+    <li> <a href="50EC4806.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x0BE59BB050EC4806">(mirror)</a></a></li>
     <li>Feel free to get in touch directly via email if you wanna talk.</li>
 </ul>
 <ul>
