Adds travelog link.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav>
 <a href="mailto:g.sastry@gmail.com">email</a>
-<a href="#">travelog</a>
+<a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
 </nav>
 
 
