Does some cleanup.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <nav>
 <a href="mailto:g.sastry@gmail.com">email</a>
 <a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
+<a href="#">links</a>
 </nav>
 
 
@@ -33,7 +34,7 @@ at <a href="http://www.yale.edu">Yale University</a>.
     a product to visualize terms associated with events in realtime, and user growth
     experiments.</li>
     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
-    task assignment algorithm for Hadoop. (<a href="papers/writeup.pdf">pdf</a>
+    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>
     <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
 </ul>
 </section>
