--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <img id="name" src="images/name.png" alt="Girish Sastry">
 
 <nav>
-<a href="mailto:g.sastry@gmail.com">email</a>
-<a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
-<a href="#">links</a>
+    <a href="mailto:g.sastry@gmail.com">email</a>
+    <a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
+    <a href="#">links</a>
+    <a href="/viewquakes.html">viewquakes</a>
 </nav>
 
 
