--- a/viewquakes.html
+++ b/viewquakes.html
@@ -7,8 +7,8 @@
 <body>
 	<h1> Viewquakes </h1>
     <p>
-        In which I reflect, fantasize, and fetishize objects made from trees filled with
-        scratchy blank ink.
+        In which I reflect upon, fantasize, and fetishize objects made from trees filled with
+        black ink.
     </p>
 	<ol>
 		<li> Tempo: Timing, Tactics, and Strategy in Narrative-driven Decision Making </li>
