Adds visual narrative explanations.

--- a/index.html
+++ b/index.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<link rel="icon" href="/favicon.ico">
-<title>girish sastry</title>
-<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-<img id="name" src="images/name.png" alt="Girish Sastry">
+    <head>
+        <meta charset="utf-8">
+        <link rel="icon" href="/favicon.ico">
+        <title>girish sastry</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+    </head>
+    <body>
+        <img id="name" src="images/name.png" alt="Girish Sastry">
 
-<nav>
-    <a href="mailto:g.sastry@gmail.com">email</a>
-    <a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
-    <a href="#">links</a>
-    <a href="/viewquakes.html">viewquakes</a>
-</nav>
+        <nav>
+            <a href="mailto:g.sastry@gmail.com">email</a>
+            <a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
+            <a href="#">links</a>
+            <a href="/viewquakes.html">viewquakes</a>
+        </nav>
 
 
-<section id="intro">
-<p> I'm currently traveling around the world and hacking on personal projects.
-I used to work as a Software Engineer at
-<a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
-Previously, I studied Computer Science and other interesting things
-at <a href="http://www.yale.edu">Yale University</a>.
+        <section id="intro">
+            <p> &nbsp;&nbsp;&nbsp;&nbsp; I'm currently traveling around the world and hacking on personal projects.
+                I used to work as a Software Engineer at
+                <a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
+                Previously, I studied Computer Science and other interesting things
+                at <a href="http://www.yale.edu">Yale University</a>.
+            </p>
 
-</section>
+        </section>
 
-<section id="stuff">
-<h1>Stuff</h1>
+        <section id="stuff">
+            <h1>Stuff</h1>
+                <ul>
+                    <li> disclaimer: I'm too lazy to update this site often </li>
+                    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
+                    a product to visualize terms associated with events in realtime, and user growth
+                    experiments.</li>
+                    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
+                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>
+                    <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
+                </ul>
+        </section>
 
-<ul>
-	<li> disclaimer: I'm too lazy to update this site often </li>
-    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
-    a product to visualize terms associated with events in realtime, and user growth
-    experiments.</li>
-    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
-    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>
-    <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
-</ul>
-</section>
+        <section id="other">
+            <h1>Other</h1>
+                <ul>
+                    <li> You can also find me at:
+                    <a href="http://www.facebook.com/gyratortron">Facebook.</a>
+                    <a href="http://www.twitter.com/gyratortron">Twitter.</a>
+                    <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
+                    <a href="http://www.github.com/gsastry">Github.</a>
+                    <a href="http://www.quora.com/girish-sastry">Quora.</a>
+                    <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
+                    <li> <a href="/visual-narrative-explanations.html">A list of visual narrative explanations for simple concepts</a></li>
+                    <li>Feel free to get in touch directly via email if you wanna talk.</li>
+                </ul>
+        </section>
 
-<section id="other">
-<h1>Other</h1>
-<ul>
-    <li> You can also find me at:
-    <a href="http://www.facebook.com/gyratortron">Facebook.</a>
-    <a href="http://www.twitter.com/gyratortron">Twitter.</a>
-    <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-    <a href="http://www.github.com/gsastry">Github.</a>
-    <a href="http://www.quora.com/girish-sastry">Quora.</a>
-    <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
-    <li>Feel free to get in touch directly via email if you wanna talk.</li>
-</ul>
-<ul>
-</section>
-
-<footer id="date">Last updated January 2013. Design cannibalized from Shu-yu Guo.<footer>
-<script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
-</body>
+        <footer id="date">Last updated January 2013. Design cannibalized from Shu-yu Guo.<footer>
+        <script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
+    </body>
 </html>
 
 
