--- a/visual-narrative-explanations.html
+++ b/visual-narrative-explanations.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1> Visual Narrative Explanations of Simple Concepts </h1>
+    <p> External links: </p>
 	<ul>
         <li> <a href="http://vudlab.com/fat-tails.html">Normal vs Fat Tailed Distributions</a> </li>
         <li> <a href="http://vudlab.com/simpsons/">Simpson's  Paradox</a> </li>
