Adds pythogorean thm.

--- a/visual-narrative-explanations.html
+++ b/visual-narrative-explanations.html
@@ -10,6 +10,7 @@
 	<ul>
         <li> <a href="http://vudlab.com/fat-tails.html">Normal vs Fat Tailed Distributions</a> </li>
         <li> <a href="http://vudlab.com/simpsons/">Simpson's  Paradox</a> </li>
+        <li> <a href="http://www.jasondavies.com/pythagoras-proof/">Pythogorean Theorem</a> </li>
 	</ul>
 </body>
 </html>
