--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <nav>
             <a href="mailto:g.sastry@gmail.com">email</a>
-            <a href="http://perhapsyouspeakenglish.wordpress.com">travelog</a>
+            <a href="/writing.html">writing</a>
             <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">reading</a>
             <a href="/viewquakes.html">viewquakes</a>
         </nav>
