Fixes html tag typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <nav>
             <a href="mailto:g.sastry@gmail.com">email</a>
-            <a href="/writing.html">writing</a>
+            <a href="/writings.html">writings</a>
             <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">reading</a>
             <a href="/viewquakes.html">viewquakes</a>
         </nav>
@@ -44,11 +44,12 @@
             <h1>Other</h1>
                 <ul>
                     <li> You can also find me at:
-                    <a href="http://www.facebook.com/gyratortron">Facebook.</a>
-                    <a href="http://www.twitter.com/gyratortron">Twitter.</a>
-                    <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-                    <a href="http://www.github.com/gsastry">Github.</a>
-                    <a href="http://www.quora.com/girish-sastry">Quora.</a>
+                        <a href="http://www.facebook.com/gyratortron">Facebook.</a>
+                        <a href="http://www.twitter.com/gyratortron">Twitter.</a>
+                        <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
+                        <a href="http://www.github.com/gsastry">Github.</a>
+                        <a href="http://www.quora.com/girish-sastry">Quora.</a>
+                    </li>
                     <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
                     <li> <a href="/visual-narrative-explanations.html">A list of visual narrative explanations for simple concepts</a></li>
                     <li>Feel free to get in touch directly via email if you wanna talk.</li>
