--- a/writings.html
+++ b/writings.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
 	<title>Writings</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <h1> Collected Shite</h1>
-    <p> External links: </p>
-	<ul>
-        <li> <a href="http://perhapsyouspeaksenglish.wordpress.com">A very vulgar travelog </a> </li>
-	</ul>
+    <section id="links">
+    <h1> Ye Olde Writings</h1>
+        <ul>
+            <li> <a href="http://perhapsyouspeaksenglish.wordpress.com">A very vulgar travelog </a> </li>
+        </ul>
+    </section>
 </body>
 </html>
