trying out some consistent grammar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="mailto:g.sastry@gmail.com">email</a>
             <a href="/writings.html">writings</a>
-            <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">reading</a>
+            <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">readings</a>
             <a href="/viewquakes.html">viewquakes</a>
         </nav>
 
