--- a/writings.html
+++ b/writings.html
@@ -9,7 +9,7 @@
     <section id="links">
     <h1> Ye Olde Writings</h1>
         <ul>
-            <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">A very vulgar travelog </a> </li>
+            <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">Perhaps You Speak English?: A very vulgar travelog </a> </li>
         </ul>
     </section>
 </body>
