--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <nav>
             <a href="mailto:g.sastry@gmail.com">email</a>
-            <a href="/writings.html">writings</a>
-            <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">readings</a>
+            <a href="/writing.html">writing</a>
+            <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">reading</a>
             <a href="/viewquakes.html">viewquakes</a>
         </nav>
 
