Add contact blurb

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
                 Previously, I studied Computer Science and other interesting things
                 at <a href="http://www.yale.edu">Yale University</a>.
+
+                One of my favorite hobbies is talking to people I don't know about things I don't understand, so 
+                please reach out if you're interested in talking.
             </p>
 
         </section>
