--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
 
 
         <section id="intro">
-            <p> &nbsp;&nbsp;&nbsp;&nbsp; I'm currently traveling around the world and hacking on personal projects.
+            <p> 
+                I'm very interested in the far future, and how our decisions today affect our developmental
+                trajectory over the next millions, billions, and trillions of years.
+
+                I currently work at <a href="https://www.iterable.com">Iterable</a>. We are building software to
+                help Internet businesses grow.
                 I used to work as a Software Engineer at
-                <a href="http://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
+                <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
                 Previously, I studied Computer Science and other interesting things
-                at <a href="http://www.yale.edu">Yale University</a>.
+                at <a href="https://www.yale.edu">Yale University</a>.
 
             </p>
             <p>
                 One of my favorite hobbies is talking to people I don't know about things I don't understand, so 
-                please reach out if you're interested in talking.
+                please reach out if you're interested.
             </p>
 
         </section>
