--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <section id="intro">
             <p> 
-                I'm very interested in the far future, and how our decisions today affect our developmental
+                I'm very interested in the far future, and how our decisions today affect society's development
                 trajectory over the next millions, billions, and trillions of years.
             </p>
             <p> 
