add blurb to writing

--- a/writing.html
+++ b/writing.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <section id="links">
-    <h1> Ye Olde Writings</h1>
+    <h1> Writings</h1>
         <ul>
-            <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">Perhaps You Speak English?: A very vulgar travelog </a> </li>
+            <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">Perhaps You Speak English?: A very vulgar travelog </a> 
+                Droll reflections on the wayfaring life.
+            </li>
         </ul>
     </section>
 </body>
