--- a/writing.html
+++ b/writing.html
@@ -10,7 +10,7 @@
     <h1> Writings</h1>
         <ul>
             <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">Perhaps You Speak English?: A very vulgar travelog </a> 
-                Droll reflections on the wayfaring life.
+            <p>Droll reflections on the wayfaring life.</p>
             </li>
         </ul>
     </section>
