update as of june 2016

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 
         <section id="intro">
-            <p> 
-                I currently work at <a href="https://www.iterable.com">Iterable</a>. We are building software to
-                help Internet businesses grow.
-                I used to work as a Software Engineer at
-                <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
+            <p>
+                I'm currently pursuing personal interests. (keywords: AI, math, human social behavior)
+            </p>
+            <p>
+                I used to work at <a href="https://www.iterable.com">Iterable</a> and <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
                 Previously, I studied Computer Science and other interesting things
                 at <a href="https://www.yale.edu">Yale University</a>.
 
             </p>
             <p>
-                One of my favorite hobbies is talking to people I don't know about things I don't understand, so 
+                One of my favorite hobbies is talking to people I don't know about things I don't understand, so
                 please reach out if you're interested.
             </p>
 
@@ -61,7 +61,7 @@
                 </ul>
         </section>
 
-        <footer id="date">Last updated December 2014. Design cannibalized from Shu-yu Guo.<footer>
+        <footer id="date">Last updated June 2016. Design cannibalized from Shu-yu Guo.<footer>
         <script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
