--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <section id="intro">
             <p>
-                I'm currently pursuing personal interests. (keywords: AI, math, human social behavior)
+                I'm currently pursuing personal interests (keywords: AI, math, human social behavior).
             </p>
             <p>
-                I used to work at <a href="https://www.iterable.com">Iterable</a> and <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
+                I used to work at <a href="https://www.iterable.com">Iterable</a>, where I was the first (non-founder) engineer, and <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
                 Previously, I studied Computer Science and other interesting things
                 at <a href="https://www.yale.edu">Yale University</a>.
 
