Update twitter handle

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li> You can also find me at:
                         <a href="http://www.facebook.com/gyratortron">Facebook.</a>
-                        <a href="http://www.twitter.com/gyratortron">Twitter.</a>
+                        <a href="http://www.twitter.com/girishsastry">Twitter.</a>
                         <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
                         <a href="http://www.github.com/gsastry">Github.</a>
                         <a href="http://www.quora.com/girish-sastry">Quora.</a>
