--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     experiments.</li>
                     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
                     task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>
-                    <a href="http://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
+                    <a href="https://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
                 </ul>
         </section>
 
@@ -50,11 +50,11 @@
             <h1>Other</h1>
                 <ul>
                     <li> You can also find me at:
-                        <a href="http://www.facebook.com/gyratortron">Facebook.</a>
-                        <a href="http://www.twitter.com/girishsastry">Twitter.</a>
-                        <a href="http://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-                        <a href="http://www.github.com/gsastry">Github.</a>
-                        <a href="http://www.quora.com/girish-sastry">Quora.</a>
+                        <a href="https://www.facebook.com/gyratortron">Facebook.</a>
+                        <a href="https://www.twitter.com/girishsastry">Twitter.</a>
+                        <a href="https://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
+                        <a href="https://www.github.com/gsastry">Github.</a>
+                        <a href="https://www.quora.com/girish-sastry">Quora.</a>
                     </li>
                     <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
                     <li>Feel free to get in touch directly via email if you wanna talk.</li>
