--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     a product to visualize terms associated with events in realtime, and user growth
                     experiments.</li>
                     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
-                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>
+                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>|
                     <a href="https://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
                 </ul>
         </section>
@@ -54,10 +54,10 @@
                         <a href="https://www.twitter.com/girishsastry">Twitter.</a>
                         <a href="https://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
                         <a href="https://www.github.com/gsastry">Github.</a>
-                        <a href="https://www.quora.com/girish-sastry">Quora.</a>
+                        <a href="https://www.keybase.io/girish">Keybase.</a>
                     </li>
                     <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
-                    <li>Feel free to get in touch directly via email if you wanna talk.</li>
+                    <li>Feel free to get in touch directly via email if you wanna talk, and please use PGP when possible.</li>
                 </ul>
         </section>
 
