--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     a product to visualize terms associated with events in realtime, and user growth
                     experiments.</li>
                     <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
-                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>|
+                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>/
                     <a href="https://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
                 </ul>
         </section>
