Add broken link to signposts

--- a/writing.html
+++ b/writing.html
@@ -9,8 +9,19 @@
     <section id="links">
     <h1> Writings</h1>
         <ul>
-            <li> <a href="http://perhapsyouspeakenglish.wordpress.com/">Perhaps You Speak English?: A very vulgar travelog </a> 
+            <li>
+                <a href="http://perhapsyouspeakenglish.wordpress.com/">
+                    Perhaps You Speak English?: A very vulgar travelog
+                </a>
             <p>Droll reflections on the wayfaring life.</p>
+            </li>
+            <li>
+                <a href="#">
+                    Human-level AI signposts
+                </a>
+                <p>
+                    Tracking progress in artificial intelligence.
+                </p>
             </li>
         </ul>
     </section>
