--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
         <section id="intro">
             <p>
-                I'm currently pursuing personal interests (keywords: AI, math, human social behavior).
+                I'm interested in AI: how can we design safe and highly-capable systems, and thoughtfully handle the
+                <a href="http://www.openphilanthropy.org/blog/potential-risks-advanced-artificial-intelligence-philanthropic-opportunity">potential risks
+                from advanced artifical intelligence</a>?
             </p>
             <p>
                 I used to work at <a href="https://www.iterable.com">Iterable</a>, where I was the first (non-founder) engineer, and <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
