--- a/index.html
+++ b/index.html
@@ -2,77 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="/favicon.ico">
-        <title>girish sastry</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>*</title>
     </head>
     <body>
-        <img id="name" src="images/name.png" alt="Girish Sastry">
-
-        <nav>
-            <a href="mailto:g.sastry@gmail.com">email</a>
-            <a href="/writing.html">writing</a>
-            <a href="https://www.goodreads.com/review/list/3016981?shelf=currently-reading">reading</a>
-        </nav>
-
-
-        <section id="intro">
-            <p>
-                I'm interested in AI: how can we design safe and highly-capable systems, and thoughtfully handle the
-                <a href="http://www.openphilanthropy.org/blog/potential-risks-advanced-artificial-intelligence-philanthropic-opportunity">potential risks
-                from advanced artifical intelligence</a>?
-            </p>
-            <p>
-                I used to work at <a href="https://www.iterable.com">Iterable</a>, where I was the first (non-founder) engineer, and <a href="https://www.twitter.com">Twitter</a>, where I worked on Revenue and Growth.
-                Previously, I studied Computer Science and other interesting things
-                at <a href="https://www.yale.edu">Yale University</a>.
-
-            </p>
-            <p>
-                One of my favorite hobbies is talking to people I don't know about things I don't understand, so
-                please reach out if you're interested.
-            </p>
-
-        </section>
-
-        <section id="stuff">
-            <h1>Stuff</h1>
-                <ul>
-                    <li> disclaimer: I'm too lazy to update this site often </li>
-                    <li> At Twitter, I worked on various projects: the backend of the realtime ad serving system,
-                    a product to visualize terms associated with events in realtime, and user growth
-                    experiments.</li>
-                    <li>For my undergraduate thesis work, I optimized, implemented, and benchmarked FlowScheduler, a new
-                    task assignment algorithm for Hadoop. (<a href="papers/thesis.pdf">pdf</a>/<a href="https://github.com/gsastry/hadoop-mapreduce">code</a>)</li>
-                </ul>
-        </section>
-
-        <section id="other">
-            <h1>Other</h1>
-                <ul>
-                    <li> You can also find me at:
-                        <a href="https://www.facebook.com/gyratortron">Facebook.</a>
-                        <a href="https://www.twitter.com/girishsastry">Twitter.</a>
-                        <a href="https://www.linkedin.com/pub/girish-sastry/8/934/2a3">LinkedIn.</a>
-                        <a href="https://www.github.com/gsastry">Github.</a>
-                        <a href="https://www.keybase.io/girish">Keybase.</a>
-                    </li>
-                    <li> <a href="E69A39A2.txt"> PGP public key</a> <a href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x668C4416E69A39A2">(mirror)</a></a></li>
-                    <li>Feel free to get in touch directly via email if you wanna talk, and please use PGP when possible.</li>
-                </ul>
-        </section>
-
-        <footer id="date">Last updated June 2016. Design cannibalized from Shu-yu Guo.<footer>
-        <script type='text/javascript'> var mp_protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://'); document.write(unescape('%3Cscript src="' + mp_protocol + 'api.mixpanel.com/site_media/js/api/mixpanel.js" type="text/javascript"%3E%3C/script%3E')); </script> <script type='text/javascript'> try {  var mpmetrics = new MixpanelLib('e7af82d740f157268a19afeddd4b3bf6'); } catch(err) { null_fn = function () {}; var mpmetrics = {  track: null_fn,  track_funnel: null_fn,  register: null_fn,  register_once: null_fn, register_funnel: null_fn }; } </script>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-4857183-3', 'auto');
-            ga('send', 'pageview');
-
-        </script>
+        <pre>
+.            (2007)
+.            (2011)
+.            (2013)
+.            (2017)
+intermission (2018)
+*            (?)
+        </pre>
     </body>
 </html>
