--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <pre>
-.            (2007)
-.            (2011)
-.            (2013)
-.            (2017)
-intermission (2018)
-*            (?)
+computer science, physics, liberal arts    (2007)
+web infrastructure                         (2011)
+startup, philosophy                        (2013)
+AI safety                                  (2017)
+intermission                               (2018)
+AI ethics, policy, strategy                (2019)
         </pre>
     </body>
 </html>
