--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
         <title>*</title>
     </head>
     <body>
+<code>
+- girish sastry  - 
+</code>
+<pre>
+I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
+
+To contact me, please email: g.sastry+1b7a@gmail.com
+</pre>
+<pre>
+- xp - 
+</pre>
         <pre>
 computer science, physics, liberal arts    (2007)
 web infrastructure                         (2011)
-startup, philosophy                        (2013)
+startup                                    (2013)
 AI safety                                  (2017)
 intermission                               (2018)
-AI ethics, policy, strategy                (2019)
+AI                                         (2019+)
         </pre>
     </body>
 </html>
