--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ web infrastructure                         (2011)
 startup                                    (2013)
 AI safety                                  (2017)
 intermission                               (2018)
-AI                                         (2019+)
+AI ethics, policy, & strategy              (2019+)
         </pre>
     </body>
 </html>
