--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <code>
-- girish sastry  - 
+--- girish sastry  ---
 </code>
 <pre>
 I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
@@ -14,7 +14,7 @@ I am a researcher at OpenAI interested in issues of AI ethics, policy, & strateg
 To contact me, please email: g.sastry+1b7a@gmail.com
 </pre>
 <pre>
-- xp - 
+--- xp ---
 </pre>
         <pre>
 computer science, physics, liberal arts    (2007)
