--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <code>
 --- girish sastry  ---
 </code>
-<pre>
+        <center>
+            <pre>
 I am a researcher at OpenAI interested in issues of AI ethics, policy, & strategy.
 
 To contact me, please email: g.sastry+1b7a@gmail.com
 </pre>
+        </center>
+
 <pre>
 ----------------------
 </pre>
